<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/shade5">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/small_child"
            android:layout_width="139dp"
            android:layout_height="81dp"
            android:backgroundTint="@color/shade1"
            android:text="@string/SmallChildPage"
            android:textColor="@color/shade4"
            app:layout_constraintBottom_toTopOf="@+id/big_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.734"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/big_child"
            android:layout_width="139dp"
            android:layout_height="81dp"
            android:backgroundTint="@color/shade1"
            android:text="@string/BigChildPage"
            android:textColor="@color/shade4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/pregnant_woman"
            android:layout_width="139dp"
            android:layout_height="81dp"
            android:backgroundTint="@color/shade1"
            android:text="@string/PregnantWomanPage"
            android:textColor="@color/shade4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/big_child"
            app:layout_constraintVertical_bias="0.321"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asul_bold"
            android:singleLine="true"
            android:text="Namaste AASHA"
            android:textColor="@color/shade1"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/small_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <Button-->
        <!--            android:id="@+id/exportXL"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Export Data"-->
        <!--            android:textColor="@color/white"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.911"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintVertical_bias="0.879" />-->

        <ImageButton
            android:id="@+id/exportXL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/shade5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.911"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.879"
            app:srcCompat="@drawable/ic_baseline_save_alt_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/shade1"
        app:itemIconTint="@drawable/selector_color"
        app:itemTextColor="@drawable/selector_color"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>
