<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile"
    android:background="@color/shade5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:itemBackground="@color/shade1"
            app:itemIconTint="@drawable/selector_color"
            app:itemTextColor="@drawable/selector_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/menu_navigation"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-90dp"            >

            <LinearLayout
                android:id="@+id/Name_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/Asha_Name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/asul_bold"
                    android:text="Name"
                    android:textAlignment="center"
                    android:textColor="@color/shade1"
                    android:textSize="48sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/AshaID_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AshaID_name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/AshaID"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/AshaID_Value"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=" XYZ ABCD"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/EMail_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/EMail_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Email_hint"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Email_name"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=" XYZ ABCD"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/EMail_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:selectAllOnFocus="true"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Phone_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Phone_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Phone_Name"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Phone_name"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=" ABCD XYZ"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/Phone_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:selectAllOnFocus="true"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/DOJ_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DOJ_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/DOJ"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/DateOJ"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="date"
                    android:text=" 31/05/2003"
                    android:textColor="#000000"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/selectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:text="Pick Date"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Blood_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Blood_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Blood_Group"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Blood"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="XY"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/Blood_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Area_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Area_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Area"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Area"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=" 1.23"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/Area_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Count_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Count_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Count"
                    android:textColor="#000000"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/CountUpto2"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Count Childs Upto 2 : "
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/CountUpto2Val"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text=" 0"
                            android:textColor="#000000" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/CountUpto5"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Count Childs Upto 5 : "
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/CountUpto5Val"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text=" 0"
                            android:textColor="#000000" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/CountPregnant"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Count Pregnant Women: "
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/CountPregnantVal"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text=" 0"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


                <!--                <EditText-->
                <!--                    android:id="@+id/BMI_edit"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="42dp"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:backgroundTint="@color/black"-->
                <!--                    android:gravity="center_vertical"-->
                <!--                    android:inputType="textPersonName"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    android:visibility="gone" />-->

            </LinearLayout>

        <Button
            android:id="@+id/Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:textColor="#FFE0B2"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
